--- a/index.html
+++ b/index.html
@@ -1,8 +1,46 @@
 <html>
   <head>
-    <title> Web Dev class</title>
+    <title>flexbox practice</title>
+    <style>
+      body {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+      .container {
+        width: 800px;
+        background-color: red;
+        height: 800px;
+        padding: 10px;
+        display: flex;
+        flex-direction: row-reverse;
+        justify-content: space-between;
+        align-items: center;
+      }
+
+      .blue {
+        width: 50%;
+        background-color: blue;
+        height: 100%;
+        padding: 10px;
+        display: flex;
+      }
+
+      .orange {
+        width: 50%;
+        background-color: orange;
+        height: 70%;
+        padding: 10px;
+        display: flex;
+      }
+    </style>
   </head>
   <body>
-    <h1> Css FlexBox Practice</h1>
+    <div class="container">
+      <div class="blue">box1</div>
+      <div class="orange">box 2</div>
+      <div class="blue">box3</div>
+      <div class="orange">box 4</div>
+    </div>
   </body>
 </html>
